Fix overflow issue in Landing

--- a/src/scss/layout/_landing.scss
+++ b/src/scss/layout/_landing.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 0 auto;
+    overflow: hidden;
   }
 
   &__headline {
